<resources>
    <string name="app_name">GiSU</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="user_name">Muhammad George</string>
    <string name="info_daily_reminder">To remindering you with notifcation</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="search_hint">Search...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_following">Following</string>
    <string name="title_followers">Followers</string>
    <string name="found">Not Found</string>
    <string name="menu_info">User Information</string>
    <string name="title_refresh">Refresh</string>
    <string name="appwidget_text">Favorites User</string>
    <string name="empty_text">Don\'t have favorite user</string>
    <string name="user_photos">User Photos</string>
    <string name="Country">Country</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="repositori">Repositori</string>
    <string name="location_icon">Location Icon</string>
    <string name="country">Country</string>
</resources>
