<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/refresh"
            android:title="@string/title_refresh"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
</menu>